--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.4",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.2.4",
+    "@mui/lab": "^5.0.0-alpha.62",
     "@mui/material": "^5.2.4",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
@@ -17,6 +20,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
